--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -235,6 +235,9 @@
         margin: 10px;
         
     }
+    .barra-navegacion-accesorios:hover{
+        color: rgb(170, 170, 170);
+    }
     footer nav{
         margin-left: 350px;
     }
@@ -298,11 +301,17 @@
         width: 500px;
         height: 280px;
     }
+    .conteiner-nosotros h1{
+        font-size: 20px;
+    }
+    .conteiner-nosotros h2{
+        font-size: 20px;
+    }
     .conteiner-nosotros p{
         font-weight: 300;
         font-size: 12px;
         font-style: italic;
-        line-height: 1.6;
+        line-height: 1.2;
     }
     .conteiner-grid-trabajaconnosotros{
         display: grid;
