--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -846,6 +846,7 @@
         height: 250px;
         margin: auto;
         transition: 1s;
+        margin-top: 20px;
         
         
         
@@ -853,10 +854,12 @@
     }   
     .imagen-3{
         grid-area: imagen3;
+        display: flex;
+        flex-direction: column;
         width: 250px;
         height: 250px;
         margin: auto;
-        margin-top: 30px;
+        margin-top: 20px;
         transition: 1s;
         
     }
@@ -865,7 +868,7 @@
         width: 250px;
         height: 250px;
         margin: auto;
-        margin-top: 30px;
+        margin-top: 20px;
         transition: 1s;
         
     }
