--- a/css/destino.css
+++ b/css/destino.css
@@ -134,58 +134,60 @@ body div p img {
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "imagen1 imagen1 imagen1" "imagen2 imagen3 imagen4";
   }
-  .imagen-1 {
+  .galeria .imagen-1 {
     grid-area: imagen1;
     width: 1300px;
     height: 505px;
   }
-  .imagen-2 {
+  .galeria .imagen-2 {
     grid-area: imagen2;
     width: 400px;
     height: 400px;
-    margin-left: 40px;
+    margin-left: 35px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 30px;
   }
-  .imagen-2:hover {
+  .galeria .imagen-2:hover {
     transform: scale(1.15);
   }
-  .imagen-3 {
+  .galeria .imagen-3 {
     grid-area: imagen3;
     width: 400px;
     height: 400px;
-    margin-left: 20px;
+    margin-left: 35px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 30px;
   }
-  .imagen-3:hover {
+  .galeria .imagen-3:hover {
     transform: scale(1.15);
   }
-  .imagen-4 {
+  .galeria .imagen-4 {
     grid-area: imagen4;
     width: 400px;
     height: 400px;
+    margin-left: 35px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 30px;
   }
-  .imagen-4:hover {
+  .galeria .imagen-4:hover {
     transform: scale(1.15);
   }
   article {
     display: flex;
     flex-direction: row;
   }
-  footer {
-    grid-area: footer;
-    background-color: rgb(12, 12, 12);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  footer p {
-    margin-left: 500px;
-  }
 }
+footer {
+  grid-area: footer;
+  background-color: rgb(12, 12, 12);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+footer p {
+  margin-left: 500px;
+}
+
 /*Tablet*/
 @media (min-width: 481px) and (max-width: 1023px) {
   .rellenoPopup {
