--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -63,54 +63,48 @@
         grid-template-areas: 
     "imagen1 imagen1 imagen1"
     "imagen2 imagen3 imagen4";
-    }
-    
+
     .imagen-1{
         grid-area: imagen1;
         width: $ancho+300px;
         height: $alto+5px;
         
     }
-    .imagen-2{
-        grid-area: imagen2;
-        width:  ($ancho)-600px;
-        height: ($alto)-100px;
-        margin-left: 40px;
-        transition: 1s;
-        margin-top: 50px;
+    @for $i from 2 through 4 {
+        .imagen-#{$i}{
+            grid-area: imagen#{$i};
+            width: ($ancho)-600px;
+            height: ($alto)-100px;
+            margin-left: 35px;
+            transition: 1s;
+            margin-top: 30px;
 
-        &:hover{
-            transform: scale(1.15)
+            &:hover{
+                transform: scale(1.15);
+            }
+            
         }
-    }   
-    .imagen-3{
-        grid-area: imagen3;
-        width: ($ancho)-600px;
-        height: ($alto)-100px;
-        margin-left: 20px;
-        transition: 1s;
-        margin-top: 50px;
+    } //width:  ($ancho)-600px;
+      //height: ($alto)-100px;
+      //margin-left: 40px;
+      //transition: 1s;
+      //margin-top: 50px;
 
-        &:hover{
-            transform: scale(1.15)
-        }
-    }
-    .imagen-4{
-        grid-area: imagen4;
-        width: ($ancho)-600px;
-        height: ($alto)-100px;
-        transition: 1s;
-        margin-top: 50px;
+     // &:hover{
+          //transform: scale(1.15)
+     // }
 
-        &:hover{
-            transform: scale(1.15)
-        }
+
+
     }
     article{
         display: flex;
         flex-direction: row;
         
     }
+    }
+    
+    
     
     footer{
         grid-area: footer;
@@ -123,7 +117,7 @@
             margin-left: 500px;
         }
     }
- }   
+ 
  /*Tablet*/
 @media (min-width: 481px) and (max-width: 1023px){
     .rellenoPopup{
