--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -103,7 +103,7 @@
         margin-top: 50px;
 
         &:hover{
-            transform: scale(1.15)
+git             transform: scale(1.15)
         }
     }
     article{
