--- a/css/destino.css
+++ b/css/destino.css
@@ -1,411 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
+/* Error: expected "{".
+ *     ,
+ * 106 | git             transform: scale(1.15)
+ *     |                                       ^
+ *     '
+ *   scss\base\_mediaQ.scss 106:39  @import
+ *   scss\origen.scss 2:9           root stylesheet */
 
-.popUp {
-  background-color: rgb(12, 12, 12);
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a     \2577 \a 106 \2502  git             transform: scale(1.15)\d\a     \2502                                        ^\a     \2575 \a   scss\\base\\_mediaQ.scss 106:39  @import\a   scss\\origen.scss 2:9           root stylesheet';
 }
-
-body div p {
-  color: white;
-  font-size: 15px;
-  font-weight: 100;
-  animation-name: texto-animado;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-body div p img {
-  margin-right: 10px;
-}
-
-.box-shadow {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-
-@keyframes texto-animado {
-  0% {
-    transform: translateX(-1300px);
-  }
-  30% {
-    transform: translateX(0);
-  }
-  80% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(1300px);
-  }
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
-
-.popUp {
-  background-color: rgb(12, 12, 12);
-}
-
-body div p {
-  color: white;
-  font-size: 15px;
-  font-weight: 100;
-  animation-name: texto-animado;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-body div p img {
-  margin-right: 10px;
-}
-
-.box-shadow {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-
-@keyframes texto-animado {
-  0% {
-    transform: translateX(-1300px);
-  }
-  30% {
-    transform: translateX(0);
-  }
-  80% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(1300px);
-  }
-}
-/*Desktop*/
-@media (min-width: 1024px) {
-  .rellenoPopup {
-    padding: 0% 0% 0% 45%;
-  }
-  .contenedor-grid {
-    display: grid;
-    grid-template-rows: 10% auto 10%;
-    height: 100vh;
-    grid-template-areas: "header" "main" "footer";
-  }
-  header {
-    grid-area: header;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  header .nav {
-    margin-left: 300px;
-  }
-  header .redes {
-    margin-left: 50px;
-  }
-  .carrito {
-    margin-left: 15%;
-  }
-  .no-display-desktop {
-    display: none;
-  }
-  .barra-navegacion {
-    text-decoration: none;
-    color: black;
-    margin-left: 10px;
-    border-radius: 1rem;
-    font-size: 18px;
-    padding: 7px 13px;
-  }
-  .barra-navegacion:hover {
-    background-color: rgb(12, 12, 12);
-    color: white;
-    transition: 0.5s;
-  }
-  main {
-    grid-area: main;
-  }
-  .galeria {
-    width: 100%;
-    height: 100%;
-    margin: 15px auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "imagen1 imagen1 imagen1" "imagen2 imagen3 imagen4";
-  }
-  .imagen-1 {
-    grid-area: imagen1;
-    width: 1300px;
-    height: 505px;
-  }
-  .imagen-2 {
-    grid-area: imagen2;
-    width: 400px;
-    height: 400px;
-    margin-left: 40px;
-    transition: 1s;
-    margin-top: 50px;
-  }
-  .imagen-2:hover {
-    transform: scale(1.15);
-  }
-  .imagen-3 {
-    grid-area: imagen3;
-    width: 400px;
-    height: 400px;
-    margin-left: 20px;
-    transition: 1s;
-    margin-top: 50px;
-  }
-  .imagen-3:hover {
-    transform: scale(1.15);
-  }
-  .imagen-4 {
-    grid-area: imagen4;
-    width: 400px;
-    height: 400px;
-    transition: 1s;
-    margin-top: 50px;
-  }
-  .imagen-4:hover {
-    transform: scale(1.15);
-  }
-  article {
-    display: flex;
-    flex-direction: row;
-  }
-  footer {
-    grid-area: footer;
-    background-color: rgb(12, 12, 12);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  footer p {
-    margin-left: 500px;
-  }
-}
-/*Tablet*/
-@media (min-width: 481px) and (max-width: 1023px) {
-  .rellenoPopup {
-    padding: 0% 0% 0% 45%;
-  }
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 10% auto 10%;
-    height: 100vh;
-    grid-template-areas: "header" "main" "footer";
-  }
-  .no-display {
-    display: none;
-  }
-  .logo-nav-hamburguer {
-    margin-left: 110px;
-  }
-  header {
-    grid-area: header;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .wineem-logo {
-    margin-left: 20%;
-  }
-  .carrito {
-    margin-left: 30%;
-  }
-  .barra-navegacion {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    border-radius: 1rem;
-    font-size: 17px;
-    padding: 7px 13px;
-  }
-  .barra-navegacion:hover {
-    background-color: rgb(29, 29, 29);
-    color: white;
-    transition: 0.5s;
-  }
-  main {
-    grid-area: main;
-  }
-  .galeria {
-    width: 100%;
-    margin: 15px auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "imagen1 imagen1 imagen1" "imagen2 imagen3 imagen4";
-  }
-  .imagen-1 {
-    grid-area: imagen1;
-    width: 906px;
-    height: 372px;
-  }
-  .imagen-2 {
-    grid-area: imagen2;
-    width: 300px;
-    height: 300px;
-    margin-left: 15px;
-    margin-top: 40px;
-    transition: 1s;
-  }
-  .imagen-2:hover {
-    transform: scale(1.15);
-  }
-  .imagen-3 {
-    grid-area: imagen3;
-    width: 300px;
-    height: 300px;
-    margin-left: 15px;
-    margin-top: 40px;
-    transition: 1s;
-  }
-  .imagen-3:hover {
-    transform: scale(1.15);
-  }
-  .imagen-4 {
-    grid-area: imagen4;
-    width: 300px;
-    height: 300px;
-    margin-left: 15px;
-    margin-top: 40px;
-    transition: 1s;
-  }
-  .imagen-4:hover {
-    transform: scale(1.15);
-  }
-  article {
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-  }
-  footer {
-    grid-area: footer;
-    background-color: rgb(12, 12, 12);
-    color: white;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  footer p {
-    margin-left: 300px;
-  }
-}
-/*==== SMALL DEVICE ===== */
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-  .rellenoPopup {
-    padding: 0% 0% 0% 35%;
-  }
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 10% auto 10%;
-    height: 100vh;
-    grid-template-areas: "header" "main" "footer";
-  }
-  header {
-    grid-area: header;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  .logo-nav-hamburguer {
-    margin-left: 70px;
-  }
-  .barra-navegacion {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    border-radius: 1rem;
-    font-size: 17px;
-    padding: 7px 13px;
-  }
-  .barra-navegacion:hover {
-    background-color: rgb(29, 29, 29);
-    color: white;
-    transition: 0.5s;
-  }
-  .carrito {
-    margin-left: 10%;
-  }
-  main {
-    grid-area: main;
-  }
-  .img-bnv-smarthphone {
-    width: 370px;
-    height: 390px;
-    margin-left: 1.5%;
-  }
-  .galeria {
-    width: 100%;
-    height: 55%;
-    margin: 15px auto;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "imagen1" "imagen2" "imagen3" "imagen4";
-  }
-  .imagen-1 {
-    grid-area: imagen1;
-    height: 161px;
-  }
-  .imagen-2 {
-    grid-area: imagen2;
-    width: 250px;
-    height: 250px;
-    margin: auto;
-    transition: 1s;
-    margin-top: 20px;
-  }
-  .imagen-2:hover {
-    transform: scale(1.15);
-  }
-  .imagen-3 {
-    grid-area: imagen3;
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    height: 250px;
-    margin: auto;
-    margin-top: 20px;
-    transition: 1s;
-  }
-  .imagen-3:hover {
-    transform: scale(1.15);
-  }
-  .imagen-4 {
-    grid-area: imagen4;
-    width: 250px;
-    height: 250px;
-    margin: auto;
-    margin-top: 20px;
-    transition: 1s;
-  }
-  .imagen-4:hover {
-    transform: scale(1.15);
-  }
-  article {
-    display: flex;
-    flex-direction: column;
-  }
-  footer {
-    grid-area: footer;
-    background-color: rgb(12, 12, 12);
-    color: white;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  footer p {
-    margin-left: 40px;
-  }
-  .no-display-smartphone {
-    display: none;
-  }
-}
-
-/*# sourceMappingURL=destino.css.map */
