--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -145,7 +145,7 @@
     }
     .logo-nav-hamburguer{
         margin-left: 110px;
-    }
+    }git 
     header{
         grid-area: header;
         display: flex;
