--- a/css/destino.css
+++ b/css/destino.css
@@ -134,44 +134,45 @@ body div p img {
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "imagen1 imagen1 imagen1" "imagen2 imagen3 imagen4";
   }
-  .imagen-1 {
+  .galeria .imagen-1 {
     grid-area: imagen1;
     width: 1300px;
     height: 505px;
   }
-  .imagen-2 {
+  .galeria .imagen-2 {
     grid-area: imagen2;
     width: 400px;
     height: 400px;
     margin-left: 40px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 40px;
   }
-  .imagen-2:hover {
-    transform: scale(1.15);
+  .galeria .imagen-2:hover {
+    scale: 1.15;
   }
-  .imagen-3 {
+  .galeria .imagen-3 {
     grid-area: imagen3;
     width: 400px;
     height: 400px;
-    margin-left: 20px;
+    margin-left: 40px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 40px;
   }
-  .imagen-3:hover {
-    transform: scale(1.15);
+  .galeria .imagen-3:hover {
+    scale: 1.15;
   }
-  .imagen-4 {
+  .galeria .imagen-4 {
     grid-area: imagen4;
     width: 400px;
     height: 400px;
+    margin-left: 40px;
     transition: 1s;
-    margin-top: 50px;
+    margin-top: 40px;
   }
-  .imagen-4:hover {
-    transform: scale(1.15);
+  .galeria .imagen-4:hover {
+    scale: 1.15;
   }
-  article {
+  .galeria article {
     display: flex;
     flex-direction: row;
   }
@@ -240,12 +241,12 @@ body div p img {
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "imagen1 imagen1 imagen1" "imagen2 imagen3 imagen4";
   }
-  .imagen-1 {
+  .galeria .imagen-1 {
     grid-area: imagen1;
     width: 906px;
     height: 372px;
   }
-  .imagen-2 {
+  .galeria .imagen-2 {
     grid-area: imagen2;
     width: 300px;
     height: 300px;
@@ -253,10 +254,10 @@ body div p img {
     margin-top: 40px;
     transition: 1s;
   }
-  .imagen-2:hover {
-    transform: scale(1.15);
+  .galeria .imagen-2:hover {
+    scale: 1.15;
   }
-  .imagen-3 {
+  .galeria .imagen-3 {
     grid-area: imagen3;
     width: 300px;
     height: 300px;
@@ -264,10 +265,10 @@ body div p img {
     margin-top: 40px;
     transition: 1s;
   }
-  .imagen-3:hover {
-    transform: scale(1.15);
+  .galeria .imagen-3:hover {
+    scale: 1.15;
   }
-  .imagen-4 {
+  .galeria .imagen-4 {
     grid-area: imagen4;
     width: 300px;
     height: 300px;
@@ -275,10 +276,10 @@ body div p img {
     margin-top: 40px;
     transition: 1s;
   }
-  .imagen-4:hover {
-    transform: scale(1.15);
+  .galeria .imagen-4:hover {
+    scale: 1.15;
   }
-  article {
+  .galeria article {
     display: flex;
     flex-direction: row;
     margin-top: 15px;
