--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -63,53 +63,34 @@
         grid-template-areas: 
     "imagen1 imagen1 imagen1"
     "imagen2 imagen3 imagen4";
-    }
-    
+
     .imagen-1{
         grid-area: imagen1;
         width: $ancho+300px;
         height: $alto+5px;
+        }
         
-    }
-    .imagen-2{
-        grid-area: imagen2;
-        width:  ($ancho)-600px;
-        height: ($alto)-100px;
-        margin-left: 40px;
-        transition: 1s;
-        margin-top: 50px;
+        //BUCLE//
 
-        &:hover{
-            transform: scale(1.15)
+    @for $i from 2 through 4{
+        .imagen-#{$i}{
+            grid-area:imagen#{$i};
+            width: ($ancho)-600px;
+            height: ($alto)-100px;
+            margin-left: 40px;
+            transition: 1s;
+            margin-top: 40px;
+            
+            &:hover{
+                scale: (1.15);
+            }
         }
-    }   
-    .imagen-3{
-        grid-area: imagen3;
-        width: ($ancho)-600px;
-        height: ($alto)-100px;
-        margin-left: 20px;
-        transition: 1s;
-        margin-top: 50px;
-
-        &:hover{
-            transform: scale(1.15)
         }
-    }
-    .imagen-4{
-        grid-area: imagen4;
-        width: ($ancho)-600px;
-        height: ($alto)-100px;
-        transition: 1s;
-        margin-top: 50px;
-
-        &:hover{
-            transform: scale(1.15)
+        article{
+            display: flex;
+            flex-direction: row;
+            
         }
-    }
-    article{
-        display: flex;
-        flex-direction: row;
-        
     }
     
     footer{
@@ -185,61 +166,43 @@
         grid-template-rows: 1fr 1fr;
         grid-template-areas: 
     "imagen1 imagen1 imagen1"
-    "imagen2 imagen3 imagen4"
+    "imagen2 imagen3 imagen4";
     
-    
-    }
     .imagen-1{
         grid-area: imagen1;
         width: 906px;
         height: 372px;
-        
-        
-    }
-    .imagen-2{
-        grid-area: imagen2;
-        width: 300px;
-        height: 300px;
-        margin-left: 15px;
-        margin-top: 40px;
-        transition: 1s;
-
-        &:hover{
-            transform: scale(1.15)
-        }
-       
-    }   
-    .imagen-3{
-        grid-area: imagen3;
-        width: 300px;
-        height: 300px;
-        margin-left: 15px;
-        margin-top: 40px;
-        transition: 1s;
-        
-        &:hover{
-            transform: scale(1.15)
-        }
     }
 
-    .imagen-4{
-        grid-area: imagen4;
-        width: 300px;
-        height: 300px;
-        margin-left: 15px;
-        margin-top: 40px;
-        transition: 1s;
-        
-        &:hover{
-            transform: scale(1.15)
-        }
+        //MIXIN//
+
+    @mixin sizes ($anchura, $altura) {
+        width:$anchura;
+        height: $altura;
     }
+    
+    @for $j from 2 through 4{
+        .imagen-#{$j}{
+            grid-area: imagen#{$j};
+            @include sizes(300px, 300px);
+            margin-left: 15px;
+            margin-top: 40px;
+            transition: 1s;
+
+            &:hover{
+                scale: (1.15);
+            }
+            
+        }
+        }
     article{
-        display: flex;  
-        flex-direction: row;
-        margin-top: 15px;
-        
-    }
+            display: flex;  
+            flex-direction: row;
+            margin-top: 15px;
+            
+        }
+}
+    
     footer{
         grid-area: footer;
         background-color: $color;
