--- a/css/destino.css
+++ b/css/destino.css
@@ -9,7 +9,7 @@
   background-color: rgb(12, 12, 12);
 }
 
-body div p {
+body div .text-popUp {
   color: white;
   font-size: 15px;
   font-weight: 100;
@@ -17,7 +17,7 @@ body div p {
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
-body div p img {
+body div .text-popUp img {
   margin-right: 10px;
 }
 
@@ -50,7 +50,7 @@ body div p img {
   background-color: rgb(12, 12, 12);
 }
 
-body div p {
+body div .text-popUp {
   color: white;
   font-size: 15px;
   font-weight: 100;
@@ -58,7 +58,7 @@ body div p {
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
-body div p img {
+body div .text-popUp img {
   margin-right: 10px;
 }
 
@@ -185,6 +185,223 @@ body div p img {
   }
   footer p {
     margin-left: 500px;
+  }
+  .contenedor-grid-accesorios {
+    display: grid;
+    grid-template-rows: 20% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-accesorios .header-accesorios {
+    grid-area: header;
+    display: flex;
+    justify-content: space-around;
+    margin-right: 10%;
+  }
+  .contenedor-grid-accesorios .main-accesorios {
+    grid-area: main;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+    justify-items: center;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "imagen1 imagen2 imagen3 " "imagen4 imagen5 imagen6";
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen1 {
+    grid-area: imagen1;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen2 {
+    grid-area: imagen2;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen3 {
+    grid-area: imagen3;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen4 {
+    grid-area: imagen4;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen5 {
+    grid-area: imagen5;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios .imagen6 {
+    grid-area: imagen6;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios p {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor-grid-accesorios .footer-accesorios {
+    grid-area: footer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .contenedor-grid-accesorios .footer-accesorios nav {
+    margin-left: 390px;
+  }
+  .contenedor-grid-accesorios .footer-accesorios ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+  }
+  .logos {
+    margin: 2px;
+  }
+  .barra-navegacion-accesorios {
+    color: white;
+    text-decoration: none;
+    margin: 10px;
+  }
+  .barra-navegacion-accesorios:hover {
+    color: rgb(170, 170, 170);
+  }
+  .contenedor-grid-catalogo {
+    display: grid;
+    grid-template-rows: 20% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .header-catalogo {
+    grid-area: header;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .main-catalogo {
+    grid-area: main;
+  }
+  .main-catalogo div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .main-catalogo iframe {
+    width: 1300px;
+    height: 700px;
+  }
+  .footer-catalogo {
+    grid-area: footer;
+  }
+  .footer-catalogo nav {
+    margin-left: 390px;
+  }
+  .footer-catalogo nav ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+  }
+  .contenedor-grid-nosotros {
+    display: grid;
+    grid-template-rows: 20% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .header-nosotros {
+    grid-area: header;
+  }
+  .header-nosotros .wineem-logo-nosotros {
+    margin-left: 45%;
+  }
+  .main-nosotros {
+    grid-area: main;
+  }
+  .footer-nosotros {
+    grid-area: footer;
+  }
+  .footer-nosotros nav {
+    margin-left: 380px;
+  }
+  .footer-nosotros nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+  }
+  .conteiner-nosotros {
+    margin: 0 5%;
+  }
+  .conteiner-nosotros iframe {
+    float: left;
+    margin-right: 5%;
+    width: 500px;
+    height: 280px;
+  }
+  .conteiner-nosotros h1 {
+    font-size: 20px;
+  }
+  .conteiner-nosotros h2 {
+    font-size: 20px;
+  }
+  .conteiner-nosotros P {
+    font-weight: 300;
+    font-size: 12px;
+    font-style: italic;
+    line-height: 1.2;
+  }
+  .conteiner-grid-trabajaconnosotros {
+    display: grid;
+    grid-template-rows: 20% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros {
+    grid-area: header;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros {
+    grid-area: main;
+  }
+  .conteiner-grid-trabajaconnosotros .footer-trabajaconnosotros {
+    grid-area: footer;
+  }
+  .conteiner-grid-trabajaconnosotros .footer-trabajaconnosotros nav {
+    margin-left: 390px;
+  }
+  .conteiner-grid-trabajaconnosotros .footer-trabajaconnosotros nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+  }
+  .grid-trabajaconnosotros {
+    margin-left: 5%;
+  }
+  .grid-trabajaconnosotros iframe {
+    float: left;
+    margin-right: 3%;
+    width: 600px;
+    height: 450px;
+  }
+  .grid-trabajaconnosotros p {
+    font-size: 17px;
+    font-style: italic;
+    line-height: 1.6;
+  }
+  .boton {
+    display: inline-block;
+    display: flex;
+    text-decoration: none;
+    width: 150px;
+    height: 50px;
+    padding-left: 20px;
+    margin-top: 5px;
+    align-items: center;
+    border-radius: 2rem;
+    color: black;
+    border: solid;
+  }
+  .boton:hover {
+    background-color: black;
+    color: white;
+  }
+  .logo-wineem-tcn {
+    margin-left: 43%;
   }
 }
 /*Tablet*/
