--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -104,6 +104,263 @@
             margin-left: 500px;
         }
     }
+
+    .contenedor-grid-accesorios{
+        display: grid;
+        grid-template-rows: 20% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer"
+        ;
+        .header-accesorios{
+            grid-area: header;
+            display: flex; 
+            justify-content: space-around;  
+             margin-right: 10%;
+            
+            
+        }
+        .main-accesorios{
+            grid-area: main;
+
+            .galeria-accesorios{
+                display: grid;
+                width: 100%;
+                height: 100%;
+                gap: 1rem;
+                justify-items: center;
+                grid-template-columns: 1f 1fr 1fr;
+                grid-template-rows: 1fr 1fr ;
+                grid-template-areas: 
+                "imagen1 imagen2 imagen3 "
+                "imagen4 imagen5 imagen6";
+                
+                //BUCLE//
+
+                @for $m from 1 through 6{
+                    .imagen#{$m}{
+                        grid-area: imagen#{$m};
+                    }
+                }
+                p{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+        .footer-accesorios{
+            grid-area: footer;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            nav{
+                margin-left: 390px;
+                
+            }
+            ul{
+                display: flex;
+                flex-direction: row;
+                list-style: none;
+            }
+        }
+
+        
+    }
+    .logos{
+        margin: 2px;
+        
+    }
+    .barra-navegacion-accesorios{
+        color: white;
+        text-decoration: none;
+        margin: 10px;
+        
+        
+        &:hover{
+            color: rgb(170, 170, 170);
+        }
+        
+    }
+
+    .contenedor-grid-catalogo{
+        display: grid;
+        grid-template-rows: 20% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+    }
+    .header-catalogo{
+        grid-area: header;
+        display: flex;
+        flex-direction: row;
+        align-items:center;
+        justify-content:space-around;
+    }
+    .main-catalogo{
+        grid-area: main;
+        
+        div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        iframe{
+            width: $ancho+300px;
+            height: $alto+200px;
+        }
+    }
+    .footer-catalogo{
+        grid-area: footer;
+        nav{
+            margin-left: 390px;
+            
+            ul{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                list-style: none;
+            }
+        }
+    }
+
+    .contenedor-grid-nosotros{
+        display: grid;
+        grid-template-rows: 20% auto 10% ;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+    }
+
+    .header-nosotros{
+        grid-area: header;
+
+        .wineem-logo-nosotros{
+        margin-left: 45%;
+    }
+        
+    }
+    .main-nosotros{
+        grid-area: main;
+    }
+    .footer-nosotros{
+        grid-area: footer;
+
+        nav{
+            margin-left: 380px;
+            ul{
+                display: flex;
+                flex-direction: row;
+                list-style: none;
+            }
+        }
+    }
+
+    .conteiner-nosotros{
+        margin: 0 5% ;
+
+        iframe{
+            float: left;
+            margin-right: 5%;
+            width: ($ancho)-500px;
+            height: 280px ;
+        }
+        //BUCLE//
+        @for $e from 1 through 2{
+            h#{$e}{
+                font-size: 20px;
+            }
+        }
+        P{
+            font-weight: 300;
+            font-size: 12px;
+            font-style: italic;
+            line-height: 1.2;
+        }
+       
+    
+    }   
+
+    .conteiner-grid-trabajaconnosotros{
+        display: grid;
+        grid-template-rows: 20% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        .header-trabajaconnosotros{
+            grid-area: header;
+        }
+        .main-trabajaconnosotros{
+            grid-area: main;
+        }
+        .footer-trabajaconnosotros{
+            grid-area: footer;
+            
+            nav{
+                margin-left: 390px;
+                ul{
+                    display: flex;
+                    flex-direction: row;
+                    list-style: none;
+                }
+            }
+        }
+    }
+    .grid-trabajaconnosotros{
+        margin-left: 5%;
+
+        iframe{
+            float: left;
+            margin-right: 3%;
+            width: 600px;
+            height: 450px;
+        }
+
+        p{
+            
+             font-size: 17px;
+             font-style: italic;
+             line-height: 1.6;
+            
+        }
+    }
+    .boton{
+        display: inline-block;
+        display: flex;
+       text-decoration: none;
+       width: 150px;
+       height: 50px;
+       padding-left: 20px;
+       margin-top: 5px;
+       align-items: center;
+       border-radius: 2rem;
+       color: black;
+       border: solid;
+       
+       &:hover{
+        background-color: black;
+        color: white;
+       }
+    }
+
+    .logo-wineem-tcn{
+        margin-left: 43%;
+    }
+    
+
  }   
  /*Tablet*/
 @media (min-width: 481px) and (max-width: 1023px){
