responsive todo el proyecto, con sass

--- a/scss/base/_mediaQ.scss
+++ b/scss/base/_mediaQ.scss
@@ -473,6 +473,245 @@
         }
     }
 
+    .contenedor-grid-accesorios{
+        display: grid;
+        grid-template-rows: 15% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer"
+        ;
+
+        .header-accesorios{
+            grid-area: header;
+            display: flex; 
+            justify-content: space-evenly;  
+            flex-direction: row;
+    
+        }
+        .main-accesorios{
+            grid-area: main;
+
+            .galeria-accesorios{
+                display: grid;
+                justify-items: center;
+                width: 100%;
+                height: 50%;
+                gap: 1rem;
+                margin-top: 100px;
+                grid-template-columns: 1f 1fr;
+                grid-template-rows: 1fr 1fr 2fr;
+                grid-template-areas: 
+                "imagen1 imagen2"
+                "imagen3 imagen4"
+                "imagen5 imagen6";
+            }
+        
+                @for $a from 1 through 6{
+                    .imagen#{$a}{
+                        grid-area: imagen#{$a};
+                    }
+                    
+                }
+            p{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                font-size: 12px;
+                font-weight: bold;
+                
+                }
+        }
+        .footer-accesorios{
+            grid-area: footer;
+            display: flex;
+            flex-direction: row;
+            
+            .logos{
+                margin: 5px;
+            }
+        }
+    }
+    .wineem-logo-accesorios-tablet{
+        margin-left: 80%;
+    }
+    
+    .carrito-accesorios{
+        margin-left: 30%;
+    }
+
+    .contenedor-grid-catalogo{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        .header-catalogo{
+            grid-area: header;
+            display: flex;
+            flex-direction: row;
+            align-items:center;
+            justify-content: space-around;
+            
+            
+        }
+        .main-catalogo{
+            grid-area: main;
+            
+            div{
+                display: flex;
+                 align-items: center;
+                justify-content: center;
+                margin-bottom: 20px;
+
+                iframe{
+                    width: 1330px;
+                    height: 700px;
+                }
+            }
+        }
+        .footer-catalogo{
+            grid-area: footer;
+        }
+    }
+    .logo-catalogo{
+        margin-left: 30%;
+    }
+    .carrito-catalogo{
+        margin-left: 25%;
+    }
+    
+    .contenedor-grid-nosotros{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% auto 10% ;
+        height: 100vh;
+        
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        .header-nosotros{
+            grid-area: header;
+        }
+        .main-nosotros{
+            grid-area: main;
+
+            .conteiner-nosotros {
+                
+               iframe{
+                float: none;
+                margin-left: 27%;
+                height: 200px;
+                width: 450px;
+               }
+
+               p{
+                font-weight: 300;
+                font-size: 13px;
+                font-style: italic;
+                line-height: 1.6;
+                margin-left: 5px;
+               }
+               h1{
+                font-size: 18px;
+                margin-left: 5px;
+                }
+                h2{
+                font-size: 18px;
+                
+                } 
+            }
+        }
+        .footer-nosotros{
+            grid-area: footer;
+            .logos{
+                margin: 2px;
+                
+            }
+        }
+    }
+    .wineem-logo-nosotros{
+        margin-left: 25%;
+    }
+    .carrito-nosotros{
+        margin-left: 25%;
+    }
+        
+    .conteiner-grid-trabajaconnosotros{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        .header-trabajaconnosotros{
+            grid-area: header;
+
+            .logo-wineem-tcn{
+                margin-left: 20%;
+            }
+            .carrito-tcn{
+                margin-left: 20%;
+            }
+        }
+        .main-trabajaconnosotros{
+            grid-area: main;
+
+            .grid-trabajaconnosotros{
+                margin-left: 5%;
+
+                iframe{
+                    float: none;
+                    margin-left: 17%;
+                    width: 600px;
+                    height: 300px;
+                }
+                p{
+                    display: flex;
+                    justify-content: center;
+                    font-size: 17px;
+                    font-style: italic;
+                    line-height: 1.6;
+                    font-weight: 800;
+                    
+                }
+                .boton{
+                    display: inline-block;
+                    display: flex;
+                   text-decoration: none;
+                   width: 150px;
+                   height: 50px;
+                   padding-left: 20px;
+                   margin-top: 30px;
+                   margin-left: 40%;
+                   align-items: center;
+                   border-radius: 2rem;
+                   color: black;
+                   border: solid;
+
+                   &:hover{
+                    background-color: black;
+                    color: white;
+                   }
+                }
+            }
+        }
+        .footer-trabajaconnosotros{
+            grid-area: footer;
+        }
+    }  
+    
+    
 }
 
 /*==== SMALL DEVICE ===== */
@@ -553,6 +792,7 @@
         
         
     }
+    
     .imagen-2{
         grid-area: imagen2;
         width: 250px;
@@ -613,4 +853,240 @@
         display: none;
     }
     
+    .contenedor-grid-accesorios{
+        display: grid;
+        grid-template-rows: 15% auto 5%;
+        height: 100vh;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer"
+        ;
+
+        .header-accesorios{
+            grid-area: header;
+            display: flex; 
+            justify-content: center;  
+             margin-right: 10%;
+
+             .wineem-logo-accesorios-smartphone{
+                margin-left: 10px;
+            }
+            .carrito-accesorios{
+                margin-left: 30px;
+            }
+        }
+        .main-accesorios{
+            grid-area: main;
+
+            .galeria-accesorios{
+                display: grid;
+                gap: 1rem;
+                justify-items: center;
+                grid-template-columns: 100%;
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-areas: 
+                "imagen1"
+                "imagen2"
+                "imagen3"
+                "imagen4"
+                "imagen5"
+                "imagen6";
+                
+                @for $o from 1 through 6{
+                    imagen#{$o}{
+                        grid-area: imagen#{$o};
+                        width: 200px;
+                        height: 200px;
+                    }
+                }
+                p{
+                    display: flex;
+                     flex-direction: column;
+                    text-align: center;
+                    font-size: 12px;
+                    font-weight: bold;
+                    
+                    
+                }
+            }
+        }
+        .footer-accesorios{
+            grid-area: footer;
+            display: flex;
+            flex-direction: row;
+
+            .logos{
+                margin: 2px;
+                
+            }
+            
+        }
+
+        
+    }
+    .contenedor-grid-catalogo{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% auto 5%;
+        height: 100vh;
+        grid-template-areas: 
+        "heade"
+        "main"
+        "footer";
+
+        .header-catalogo{
+            grid-area: heade;
+            display: flex;
+            flex-direction: row;
+            align-items:center;
+            justify-content: center;
+
+            .carrito-catalogo{
+                margin-left: 30px;
+            }
+        }
+        .main-catalogo{
+            grid-area: main;
+
+            div{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 20px;
+
+                iframe{
+                    width: 1330px;
+                    height: 700px;
+                }
+            }
+        }
+        
+        .footer-catalogo{
+            grid-area: footer;
+        }
+    }
+
+    .contenedor-grid-nosotros{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% auto 7% ;
+        height: 100vh;
+        
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        .header-nosotros{
+            grid-area: header;
+
+            .carrito-nosotros{
+                margin-left: 30px;
+            }
+        }
+        .main-nosotros{
+            grid-area: main;
+
+            .conteiner-nosotros{
+                margin: 0 5% ;
+
+                iframe{
+                    float: none;
+                    height: 150px;
+                    width: 285px;
+                }
+
+                p{
+                    font-weight: 300;
+                     font-size: 11px;
+                     font-style: italic;
+                     line-height: 1.6;
+                }
+            }
+
+            h1{
+                font-size: 15px;
+                font-weight: 700;
+        
+            }
+            h2{
+                font-size: 15px;
+                font-weight: 700;
+            }
+        }
+        .footer-nosotros{
+            grid-area: footer;
+
+            .logos{
+                margin: 2px
+            }
+        }
+    }
+
+    .conteiner-grid-trabajaconnosotros{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 20% auto 10%;
+        height: 100vh;
+        grid-template-areas: 
+        "heade"
+        "main"
+        "footer";
+
+        .header-trabajaconnosotros{
+            grid-area: heade;
+
+            .carrito-tcn{
+                margin-left: 10%;
+            }
+        }
+        .main-trabajaconnosotros{
+            grid-area: main;
+
+            .grid-trabajaconnosotros{
+                margin-left: 5%;
+
+                iframe{
+                    float: none;
+                    margin-left: 10%;
+                    width: 285px;
+                    height: 150px;
+                    margin-bottom: 30px;
+                }
+                p{
+                    font-size: 13px;
+                    font-style: italic;
+                    line-height: 1;
+                    margin-left: 1%; 
+                    font-weight: 900;
+                }
+
+                .boton{
+                    display: inline-block;
+                    display: flex;
+                   text-decoration: none;
+                   width: 150px;
+                   height: 50px;
+                   padding-left: 20px;
+                   margin-top: 30px;
+                   margin-left: 23%;
+                   margin-bottom: 30px;
+                   align-items: center;
+                   border-radius: 2rem;
+                   color: black;
+                   border: solid;
+
+                   &:hover{
+                    background-color: black;
+                    color: white;
+                   }
+                }
+            }
+        }
+        .footer-trabajaconnosotros{
+            grid-area: footer;
+        }
+    }
+
 }
