--- a/css/destino.css
+++ b/css/destino.css
@@ -512,6 +512,209 @@ body div .text-popUp img {
   footer p {
     margin-left: 300px;
   }
+  .contenedor-grid-accesorios {
+    display: grid;
+    grid-template-rows: 15% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-accesorios .header-accesorios {
+    grid-area: header;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+  .contenedor-grid-accesorios .main-accesorios {
+    grid-area: main;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios {
+    display: grid;
+    justify-items: center;
+    width: 100%;
+    height: 50%;
+    gap: 1rem;
+    margin-top: 100px;
+    grid-template-columns: 1f 1fr;
+    grid-template-rows: 1fr 1fr 2fr;
+    grid-template-areas: "imagen1 imagen2" "imagen3 imagen4" "imagen5 imagen6";
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen1 {
+    grid-area: imagen1;
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen2 {
+    grid-area: imagen2;
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen3 {
+    grid-area: imagen3;
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen4 {
+    grid-area: imagen4;
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen5 {
+    grid-area: imagen5;
+  }
+  .contenedor-grid-accesorios .main-accesorios .imagen6 {
+    grid-area: imagen6;
+  }
+  .contenedor-grid-accesorios .main-accesorios p {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+  }
+  .contenedor-grid-accesorios .footer-accesorios {
+    grid-area: footer;
+    display: flex;
+    flex-direction: row;
+  }
+  .contenedor-grid-accesorios .footer-accesorios .logos {
+    margin: 5px;
+  }
+  .wineem-logo-accesorios-tablet {
+    margin-left: 80%;
+  }
+  .carrito-accesorios {
+    margin-left: 30%;
+  }
+  .contenedor-grid-catalogo {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-catalogo .header-catalogo {
+    grid-area: header;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .contenedor-grid-catalogo .main-catalogo {
+    grid-area: main;
+  }
+  .contenedor-grid-catalogo .main-catalogo div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .contenedor-grid-catalogo .main-catalogo div iframe {
+    width: 1330px;
+    height: 700px;
+  }
+  .contenedor-grid-catalogo .footer-catalogo {
+    grid-area: footer;
+  }
+  .logo-catalogo {
+    margin-left: 30%;
+  }
+  .carrito-catalogo {
+    margin-left: 25%;
+  }
+  .contenedor-grid-nosotros {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-nosotros .header-nosotros {
+    grid-area: header;
+  }
+  .contenedor-grid-nosotros .main-nosotros {
+    grid-area: main;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros iframe {
+    float: none;
+    margin-left: 27%;
+    height: 200px;
+    width: 450px;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros p {
+    font-weight: 300;
+    font-size: 13px;
+    font-style: italic;
+    line-height: 1.6;
+    margin-left: 5px;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros h1 {
+    font-size: 18px;
+    margin-left: 5px;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros h2 {
+    font-size: 18px;
+  }
+  .contenedor-grid-nosotros .footer-nosotros {
+    grid-area: footer;
+  }
+  .contenedor-grid-nosotros .footer-nosotros .logos {
+    margin: 2px;
+  }
+  .wineem-logo-nosotros {
+    margin-left: 25%;
+  }
+  .carrito-nosotros {
+    margin-left: 25%;
+  }
+  .conteiner-grid-trabajaconnosotros {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% auto 10%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros {
+    grid-area: header;
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros .logo-wineem-tcn {
+    margin-left: 20%;
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros .carrito-tcn {
+    margin-left: 20%;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros {
+    grid-area: main;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros {
+    margin-left: 5%;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros iframe {
+    float: none;
+    margin-left: 17%;
+    width: 600px;
+    height: 300px;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros p {
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+    font-style: italic;
+    line-height: 1.6;
+    font-weight: 800;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros .boton {
+    display: inline-block;
+    display: flex;
+    text-decoration: none;
+    width: 150px;
+    height: 50px;
+    padding-left: 20px;
+    margin-top: 30px;
+    margin-left: 40%;
+    align-items: center;
+    border-radius: 2rem;
+    color: black;
+    border: solid;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros .boton:hover {
+    background-color: black;
+    color: white;
+  }
+  .conteiner-grid-trabajaconnosotros .footer-trabajaconnosotros {
+    grid-area: footer;
+  }
 }
 /*==== SMALL DEVICE ===== */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
@@ -623,6 +826,212 @@ body div .text-popUp img {
   }
   .no-display-smartphone {
     display: none;
+  }
+  .contenedor-grid-accesorios {
+    display: grid;
+    grid-template-rows: 15% auto 5%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-accesorios .header-accesorios {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    margin-right: 10%;
+  }
+  .contenedor-grid-accesorios .header-accesorios .wineem-logo-accesorios-smartphone {
+    margin-left: 10px;
+  }
+  .contenedor-grid-accesorios .header-accesorios .carrito-accesorios {
+    margin-left: 30px;
+  }
+  .contenedor-grid-accesorios .main-accesorios {
+    grid-area: main;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios {
+    display: grid;
+    gap: 1rem;
+    justify-items: center;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: "imagen1" "imagen2" "imagen3" "imagen4" "imagen5" "imagen6";
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen1 {
+    grid-area: imagen1;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen2 {
+    grid-area: imagen2;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen3 {
+    grid-area: imagen3;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen4 {
+    grid-area: imagen4;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen5 {
+    grid-area: imagen5;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios imagen6 {
+    grid-area: imagen6;
+    width: 200px;
+    height: 200px;
+  }
+  .contenedor-grid-accesorios .main-accesorios .galeria-accesorios p {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+  }
+  .contenedor-grid-accesorios .footer-accesorios {
+    grid-area: footer;
+    display: flex;
+    flex-direction: row;
+  }
+  .contenedor-grid-accesorios .footer-accesorios .logos {
+    margin: 2px;
+  }
+  .contenedor-grid-catalogo {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% auto 5%;
+    height: 100vh;
+    grid-template-areas: "heade" "main" "footer";
+  }
+  .contenedor-grid-catalogo .header-catalogo {
+    grid-area: heade;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor-grid-catalogo .header-catalogo .carrito-catalogo {
+    margin-left: 30px;
+  }
+  .contenedor-grid-catalogo .main-catalogo {
+    grid-area: main;
+  }
+  .contenedor-grid-catalogo .main-catalogo div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .contenedor-grid-catalogo .main-catalogo div iframe {
+    width: 1330px;
+    height: 700px;
+  }
+  .contenedor-grid-catalogo .footer-catalogo {
+    grid-area: footer;
+  }
+  .contenedor-grid-nosotros {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% auto 7%;
+    height: 100vh;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .contenedor-grid-nosotros .header-nosotros {
+    grid-area: header;
+  }
+  .contenedor-grid-nosotros .header-nosotros .carrito-nosotros {
+    margin-left: 30px;
+  }
+  .contenedor-grid-nosotros .main-nosotros {
+    grid-area: main;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros {
+    margin: 0 5%;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros iframe {
+    float: none;
+    height: 150px;
+    width: 285px;
+  }
+  .contenedor-grid-nosotros .main-nosotros .conteiner-nosotros p {
+    font-weight: 300;
+    font-size: 11px;
+    font-style: italic;
+    line-height: 1.6;
+  }
+  .contenedor-grid-nosotros .main-nosotros h1 {
+    font-size: 15px;
+    font-weight: 700;
+  }
+  .contenedor-grid-nosotros .main-nosotros h2 {
+    font-size: 15px;
+    font-weight: 700;
+  }
+  .contenedor-grid-nosotros .footer-nosotros {
+    grid-area: footer;
+  }
+  .contenedor-grid-nosotros .footer-nosotros .logos {
+    margin: 2px;
+  }
+  .conteiner-grid-trabajaconnosotros {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% auto 10%;
+    height: 100vh;
+    grid-template-areas: "heade" "main" "footer";
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros {
+    grid-area: heade;
+  }
+  .conteiner-grid-trabajaconnosotros .header-trabajaconnosotros .carrito-tcn {
+    margin-left: 10%;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros {
+    grid-area: main;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros {
+    margin-left: 5%;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros iframe {
+    float: none;
+    margin-left: 10%;
+    width: 285px;
+    height: 150px;
+    margin-bottom: 30px;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros p {
+    font-size: 13px;
+    font-style: italic;
+    line-height: 1;
+    margin-left: 1%;
+    font-weight: 900;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros .boton {
+    display: inline-block;
+    display: flex;
+    text-decoration: none;
+    width: 150px;
+    height: 50px;
+    padding-left: 20px;
+    margin-top: 30px;
+    margin-left: 23%;
+    margin-bottom: 30px;
+    align-items: center;
+    border-radius: 2rem;
+    color: black;
+    border: solid;
+  }
+  .conteiner-grid-trabajaconnosotros .main-trabajaconnosotros .grid-trabajaconnosotros .boton:hover {
+    background-color: black;
+    color: white;
+  }
+  .conteiner-grid-trabajaconnosotros .footer-trabajaconnosotros {
+    grid-area: footer;
   }
 }
 
